Update material to v15 Adapt UI to new version

--- a/web/src/app/common/component/entry-select/entry-select.component.html
+++ b/web/src/app/common/component/entry-select/entry-select.component.html
@@ -1,6 +1,8 @@
-<mat-card>
-  <mat-action-list>
-    <entry-item *ngIf="nullable" (select)="select.emit(null)">Nothing</entry-item>
-    <ng-content></ng-content>
-  </mat-action-list>
-</mat-card>
+<ng-template cdkPortal>
+  <mat-card>
+    <mat-action-list>
+      <entry-item *ngIf="nullable" (select)="select.emit(null)">Nothing</entry-item>
+      <ng-content></ng-content>
+    </mat-action-list>
+  </mat-card>
+</ng-template>
