--- a/web/src/app/common/component/currency-select/currency-select.component.html
+++ b/web/src/app/common/component/currency-select/currency-select.component.html
@@ -1,5 +1,7 @@
-<currency-label [currency]="currency" [full]="true" (click)="showCurrencySelect()"></currency-label>
-<entry-select #currencySelect [nullable]="true" (select)="select($event)">
+<currency-label [currency]="currency"
+                [full]="true"
+                (click)="showCurrencySelect()"></currency-label>
+<entry-select [nullable]="true" (select)="select($event)">
   <entry-item *ngFor="let currency of settingsService.settings.currencies" [value]="currency">
     <currency-label [currency]="currency" [full]="true"></currency-label>
   </entry-item>
