--- a/web/src/app/common/component/entry-select/entry-select.component.scss
+++ b/web/src/app/common/component/entry-select/entry-select.component.scss
@@ -1,22 +1,9 @@
-:host {
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: none;
-  width: 100%;
-  height: 100%;
-  background-color: #00000070;
-  justify-items: center;
-  align-items: center;
-  z-index: 99;
-}
-
-:host.visible {
-  display: grid;
-}
-
 mat-action-list {
   max-height: 70vh;
   min-width: 16em;
   overflow-y: auto;
+}
+
+.gray-backdrop {
+  background-color: #00000070;
 }
