--- a/web/src/app/document/component/document-exchange/document-exchange.component.html
+++ b/web/src/app/document/component/document-exchange/document-exchange.component.html
@@ -1,57 +1,51 @@
-<mat-card class="toolbar">
-  <div class="title">Exchange</div>
-  <button mat-icon-button (click)="save()" [disabled]="!form.valid">
-    <mat-icon>done</mat-icon>
-  </button>
-  <button mat-icon-button (click)="close()">
-    <mat-icon>close</mat-icon>
-  </button>
-</mat-card>
+<editor title="Exchange" (onSave)="save()" (onClose)="close()" [saveDisabled]="!form.valid">
 
-<mat-card *ngIf="hint">
-  <mat-card-content>
-    <p>{{hint}}</p>
-  </mat-card-content>
-</mat-card>
+  <mat-card *ngIf="hint">
+    <mat-card-content>
+      <p>{{hint}}</p>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
+  <mat-card class="card-content-form">
 
-  <form [formGroup]="form">
+    <form [formGroup]="form">
 
-    <mat-form-field>
-      <mat-label>Date</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="date" (click)="picker.open()" readonly>
-      <mat-datepicker touchUi #picker></mat-datepicker>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Date</mat-label>
+        <input matInput [matDatepicker]="picker" formControlName="date" (click)="picker.open()" readonly>
+        <mat-datepicker touchUi #picker></mat-datepicker>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Account from</mat-label>
-      <reference-input api="/account/reference" formControlName="accountFrom"></reference-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Account from</mat-label>
+        <reference-input api="/account/reference" formControlName="accountFrom"></reference-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Amount from</mat-label>
-      <amount-input formControlName="amountFrom"></amount-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Amount from</mat-label>
+        <amount-input formControlName="amountFrom"></amount-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Account to</mat-label>
-      <reference-input api="/account/reference" formControlName="accountTo"></reference-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Account to</mat-label>
+        <reference-input api="/account/reference" formControlName="accountTo"></reference-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Amount to</mat-label>
-      <amount-input formControlName="amountTo"></amount-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Amount to</mat-label>
+        <amount-input formControlName="amountTo"></amount-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Description</mat-label>
-      <textarea matInput
-                formControlName="description"
-                cdkTextareaAutosize
-                #autosize="cdkTextareaAutosize"></textarea>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Description</mat-label>
+        <textarea matInput
+                  formControlName="description"
+                  cdkTextareaAutosize
+                  #autosize="cdkTextareaAutosize"></textarea>
+      </mat-form-field>
 
-  </form>
+    </form>
 
-</mat-card>
+  </mat-card>
+
+</editor>
