--- a/web/src/app/export-data/component/export-data-begin/export-data-begin.component.html
+++ b/web/src/app/export-data/component/export-data-begin/export-data-begin.component.html
@@ -1,22 +1,14 @@
-<mat-card class="toolbar">
-  <div class="title">Export</div>
-  <button mat-icon-button (click)="save()" [disabled]="!form.valid">
-    <mat-icon>done</mat-icon>
-  </button>
-  <button mat-icon-button (click)="close()">
-    <mat-icon>close</mat-icon>
-  </button>
-</mat-card>
+<editor title="Export" (onSave)="save()" (onClose)="close()" [saveDisabled]="!form.valid">
+  <mat-card>
+    <mat-card-content class="card-content-form">
+      <form [formGroup]="form">
 
-<mat-card>
+        <mat-form-field>
+          <mat-label>Account</mat-label>
+          <reference-input api="/account/reference" formControlName="account"></reference-input>
+        </mat-form-field>
 
-  <form [formGroup]="form">
-
-    <mat-form-field>
-      <mat-label>Account</mat-label>
-      <reference-input api="/account/reference" formControlName="account"></reference-input>
-    </mat-form-field>
-
-  </form>
-
-</mat-card>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</editor>
