--- a/web/src/app/import-data/component/import-data-begin/import-data-begin.component.html
+++ b/web/src/app/import-data/component/import-data-begin/import-data-begin.component.html
@@ -1,27 +1,19 @@
-<mat-card class="toolbar">
-  <div class="title">Import</div>
-  <button mat-icon-button (click)="save()" [disabled]="!form.valid">
-    <mat-icon>done</mat-icon>
-  </button>
-  <button mat-icon-button (click)="close()">
-    <mat-icon>close</mat-icon>
-  </button>
-</mat-card>
+<editor title="Import" (onSave)="save()" (onClose)="close()" [saveDisabled]="!form.valid">
+  <mat-card>
+    <mat-card-content class="card-content-form">
+      <form [formGroup]="form">
 
-<mat-card>
+        <mat-form-field>
+          <mat-label>File</mat-label>
+          <file-input formControlName="file"></file-input>
+        </mat-form-field>
 
-  <form [formGroup]="form">
+        <mat-form-field>
+          <mat-label>Description</mat-label>
+          <input matInput formControlName="description">
+        </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>File</mat-label>
-      <file-input formControlName="file"></file-input>
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label>Description</mat-label>
-      <input matInput formControlName="description">
-    </mat-form-field>
-
-  </form>
-
-</mat-card>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</editor>
