--- a/web/src/app/import-data/component/import-data-entry-view/import-data-entry-view.component.html
+++ b/web/src/app/import-data/component/import-data-entry-view/import-data-entry-view.component.html
@@ -1,67 +1,61 @@
 <ng-container *ngIf="entry && !document">
+  <editor title="Import entry" (onSave)="save()" (onClose)="close()">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-subtitle>Raw</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>{{entry.raw}}</mat-card-content>
+    </mat-card>
 
-  <mat-card class="toolbar">
-    <div class="title">Import entry</div>
-    <button mat-icon-button (click)="save()">
-      <mat-icon>done</mat-icon>
-    </button>
-    <button mat-icon-button (click)="close()">
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-card>
+    <mat-card>
+      <mat-card-header>
+        <mat-card-subtitle class="card-title">
+          Suggested document
+          <mat-slide-toggle [(ngModel)]="entry.skip">Skip/do not import</mat-slide-toggle>
+        </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content class="suggested">
+        <document-label [document]="entry.suggested" [disabled]="entry.skip" [mat-menu-trigger-for]="menu"></document-label>
+      </mat-card-content>
+      <mat-menu #menu>
+        <button mat-menu-item (click)="viewDocument(entry.suggested)" *ngIf="entry.suggested">View</button>
+        <button mat-menu-item (click)="createDocument('expense')">Expense</button>
+        <button mat-menu-item (click)="createDocument('income')">Income</button>
+        <button mat-menu-item (click)="createDocument('exchange')">Exchange</button>
+      </mat-menu>
+    </mat-card>
 
-  <mat-card>
-    <mat-card-subtitle>Raw</mat-card-subtitle>
-    <mat-card-content>{{entry.raw}}</mat-card-content>
-  </mat-card>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>Remove before import</mat-panel-title>
+      </mat-expansion-panel-header>
 
-  <mat-card>
-    <mat-card-subtitle class="card-title">
-      Suggested document
-      <mat-slide-toggle [(ngModel)]="entry.skip">Skip/do not import</mat-slide-toggle>
-    </mat-card-subtitle>
-    <mat-card-content class="suggested">
-      <document-label [document]="entry.suggested" [disabled]="entry.skip" [mat-menu-trigger-for]="menu"></document-label>
-    </mat-card-content>
-    <mat-menu #menu>
-      <button mat-menu-item (click)="viewDocument(entry.suggested)" *ngIf="entry.suggested">View</button>
-      <button mat-menu-item (click)="createDocument('expense')">Expense</button>
-      <button mat-menu-item (click)="createDocument('income')">Income</button>
-      <button mat-menu-item (click)="createDocument('exchange')">Exchange</button>
-    </mat-menu>
-  </mat-card>
+      <form [formGroup]="filter">
+        <mat-form-field>
+          <mat-label>Date</mat-label>
+          <input formControlName="date" matInput [matDatepicker]="date" readonly (click)="date.open()">
+          <mat-datepicker touchUi #date></mat-datepicker>
+        </mat-form-field>
 
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>Remove before import</mat-panel-title>
-    </mat-expansion-panel-header>
+        <mat-form-field>
+          <mat-label>Account</mat-label>
+          <reference-input api="/account/reference" formControlName="account"></reference-input>
+        </mat-form-field>
 
-    <form [formGroup]="filter">
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input formControlName="date" matInput [matDatepicker]="date" readonly (click)="date.open()">
-        <mat-datepicker touchUi #date></mat-datepicker>
-      </mat-form-field>
+      </form>
+    </mat-expansion-panel>
 
-      <mat-form-field>
-        <mat-label>Account</mat-label>
-        <reference-input api="/account/reference" formControlName="account"></reference-input>
-      </mat-form-field>
-
-    </form>
-  </mat-expansion-panel>
-
-  <mat-card *ngIf="documents.length > 0">
-    <mat-list>
-      <mat-list-item *ngFor="let document of documents">
-        <div matLine class="entry">
-          <mat-checkbox [checked]="isDocumentSelected(document)" (change)="selectDocument(document, $event.checked)"></mat-checkbox>
-          <document-label [document]="document"></document-label>
-        </div>
-      </mat-list-item>
-    </mat-list>
-  </mat-card>
-
+    <mat-card *ngIf="documents.length > 0">
+      <mat-list>
+        <mat-list-item *ngFor="let document of documents">
+          <div matLine class="entry">
+            <mat-checkbox [checked]="isDocumentSelected(document)" (change)="selectDocument(document, $event.checked)"></mat-checkbox>
+            <document-label [document]="document"></document-label>
+          </div>
+        </mat-list-item>
+      </mat-list>
+    </mat-card>
+  </editor>
 </ng-container>
 
 <document-view *ngIf="document != null"
