--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
@@ -1,48 +1,5 @@
-:host {
-  display: grid;
-  grid-gap: 1em;
-}
-
-.toolbar {
-  display: grid;
-  grid-template-columns: 1fr repeat(3, min-content);
-  align-items: center;
-
-  .title {
-    font-size: 1.5em;
-  }
-}
-
-.help-card {
-  display: grid;
-  grid-template-columns: min-content min-content 1fr;
-  grid-gap: 1em;
-  align-items: center;
-}
-
-.import-data {
-  display: grid;
-  grid-auto-flow: row;
-}
-
-.import-data-entries {
-  display: grid;
-  grid-auto-flow: row;
-  grid-gap: 1em;
-}
-
-.entry-imported {
-  text-decoration: line-through;
-  opacity: .5;
-}
-
-.mat-list-item {
+.mdc-list-item.mdc-list-item--with-one-line {
   height: 4em;
-}
-
-.clickable {
-  cursor: pointer;
-  user-select: none;
 }
 
 .success {
