--- a/web/src/app/reference/component/expense-category-browser/expense-category-browser.component.html
+++ b/web/src/app/reference/component/expense-category-browser/expense-category-browser.component.html
@@ -1,16 +1,13 @@
 <mat-card *ngIf="expenseCategories.length > 0">
-  <mat-list>
-    <mat-list-item *ngFor="let expenseCategory of expenseCategories">
-      <div matLine class="mat-line-with-menu">
-        <div>{{expenseCategory.name}}</div>
-        <button mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
-        <mat-menu #menu>
-          <button mat-menu-item (click)="edit(expenseCategory.id)">Edit</button>
-          <button mat-menu-item (click)="delete(expenseCategory.id)">Remove</button>
-          <button mat-menu-item (click)="usage(expenseCategory.id)">Usage</button>
-        </mat-menu>
-      </div>
-    </mat-list-item>
-  </mat-list>
+  <mat-action-list>
+    <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let expenseCategory of expenseCategories">
+      {{expenseCategory.name}}
+      <mat-menu #menu>
+        <button mat-menu-item (click)="edit(expenseCategory.id)">Edit</button>
+        <button mat-menu-item (click)="delete(expenseCategory.id)">Remove</button>
+        <button mat-menu-item (click)="usage(expenseCategory.id)">Usage</button>
+      </mat-menu>
+    </button>
+  </mat-action-list>
 </mat-card>
 <button mat-fab class="fab" (click)="add()"><mat-icon>add</mat-icon></button>
