--- a/web/src/app/report/component/dashboard/dashboard.component.html
+++ b/web/src/app/report/component/dashboard/dashboard.component.html
@@ -1,21 +1,20 @@
 <ng-container *ngFor="let accountBalance of dashboard.balances">
   <mat-card *ngIf="accountBalance.balances.length > 0">
-    <mat-card-subtitle>
-      {{accountBalance.accountName}}
-      <span class="actual-on" *ngIf="accountBalance.daysElapsed > 0">{{accountBalance.daysElapsed}} days</span>
-    </mat-card-subtitle>
+    <mat-card-header>
+      <mat-card-subtitle>
+        {{accountBalance.accountName}}
+        <span class="actual-on" *ngIf="accountBalance.daysElapsed > 0">{{accountBalance.daysElapsed}} days</span>
+      </mat-card-subtitle>
+    </mat-card-header>
     <mat-card-content>
-      <mat-chip-list>
-        <mat-chip *ngFor="let balance of accountBalance.balances"
+      <mat-chip-listbox>
+        <mat-chip-option *ngFor="let balance of accountBalance.balances"
                   (click)="viewDocuments(accountBalance.account, balance.currency)">
           <amount-label [amount]="balance"></amount-label>
-        </mat-chip>
-      </mat-chip-list>
+        </mat-chip-option>
+      </mat-chip-listbox>
     </mat-card-content>
   </mat-card>
-  <!--<mat-card class="expenses">-->
-  <!--  <div #chart></div>-->
-  <!--</mat-card>-->
 </ng-container>
 
 <button class="fab" mat-fab (click)="fastExpense()">
