--- a/web/src/app/settings/component/settings-editor.component.scss
+++ b/web/src/app/settings/component/settings-editor.component.scss
@@ -1,16 +1,5 @@
-:host {
-  display: grid;
-  grid-gap: 1em;
-}
-
-.toolbar {
-  display: grid;
-  grid-template-columns: 1fr min-content;
-  align-items: center;
-
-  .title {
-    font-size: 1.5em;
-  }
+mat-card-header {
+  padding: 16px;
 }
 
 form {
