--- a/web/src/app/document/component/document-exchange/document-exchange.component.html
+++ b/web/src/app/document/component/document-exchange/document-exchange.component.html
@@ -6,46 +6,46 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="card-content-form">
+  <mat-card>
+    <mat-card-content class="card-content-form">
+      <form [formGroup]="form">
 
-    <form [formGroup]="form">
+        <mat-form-field>
+          <mat-label>Date</mat-label>
+          <input matInput [matDatepicker]="picker" formControlName="date" (click)="picker.open()" readonly>
+          <mat-datepicker touchUi #picker></mat-datepicker>
+        </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="date" (click)="picker.open()" readonly>
-        <mat-datepicker touchUi #picker></mat-datepicker>
-      </mat-form-field>
+        <mat-form-field>
+          <mat-label>Account from</mat-label>
+          <reference-input api="/account/reference" formControlName="accountFrom"></reference-input>
+        </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Account from</mat-label>
-        <reference-input api="/account/reference" formControlName="accountFrom"></reference-input>
-      </mat-form-field>
+        <mat-form-field>
+          <mat-label>Amount from</mat-label>
+          <amount-input formControlName="amountFrom"></amount-input>
+        </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Amount from</mat-label>
-        <amount-input formControlName="amountFrom"></amount-input>
-      </mat-form-field>
+        <mat-form-field>
+          <mat-label>Account to</mat-label>
+          <reference-input api="/account/reference" formControlName="accountTo"></reference-input>
+        </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Account to</mat-label>
-        <reference-input api="/account/reference" formControlName="accountTo"></reference-input>
-      </mat-form-field>
+        <mat-form-field>
+          <mat-label>Amount to</mat-label>
+          <amount-input formControlName="amountTo"></amount-input>
+        </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Amount to</mat-label>
-        <amount-input formControlName="amountTo"></amount-input>
-      </mat-form-field>
+        <mat-form-field>
+          <mat-label>Description</mat-label>
+          <textarea matInput
+                    formControlName="description"
+                    cdkTextareaAutosize
+                    #autosize="cdkTextareaAutosize"></textarea>
+        </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Description</mat-label>
-        <textarea matInput
-                  formControlName="description"
-                  cdkTextareaAutosize
-                  #autosize="cdkTextareaAutosize"></textarea>
-      </mat-form-field>
-
-    </form>
-
+      </form>
+    </mat-card-content>
   </mat-card>
 
 </editor>
