--- a/web/src/app/report/component/dashboard/dashboard.component.html
+++ b/web/src/app/report/component/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngFor="let accountBalance of dashboard.balances">
   <mat-card *ngIf="accountBalance.balances.length > 0">
     <mat-card-header>
-      <mat-card-subtitle>
-        {{accountBalance.accountName}}
-        <span class="actual-on" *ngIf="accountBalance.daysElapsed > 0">{{accountBalance.daysElapsed}} days</span>
+      <mat-card-title>{{accountBalance.accountName}}</mat-card-title>
+      <mat-card-subtitle *ngIf="accountBalance.daysElapsed > 0">
+        {{accountBalance.daysElapsed}} days
       </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
