Tested on whole data

--- a/web/src/app/report/component/flow-graph-chart/flow-graph-chart.component.html
+++ b/web/src/app/report/component/flow-graph-chart/flow-graph-chart.component.html
@@ -20,6 +20,11 @@
     </mat-form-field>
 
     <mat-form-field>
+      <mat-label>Account</mat-label>
+      <reference-input api="/account/reference" formControlName="account"></reference-input>
+    </mat-form-field>
+
+    <mat-form-field>
       <mat-label>Currency</mat-label>
       <currency-input formControlName="currency"></currency-input>
     </mat-form-field>
