--- a/web/src/app/settings/component/settings-editor.component.html
+++ b/web/src/app/settings/component/settings-editor.component.html
@@ -63,6 +63,7 @@
     </mat-card-header>
     <mat-card-content>
       <button mat-raised-button color="primary" (click)="clearDatabase()">Clear database</button>
+      <button mat-raised-button color="primary" (click)="rebuildGraph()">Rebuild graph</button>
     </mat-card-content>
   </mat-card>
 
