--- a/web/src/app/report/component/dashboard/dashboard.component.html
+++ b/web/src/app/report/component/dashboard/dashboard.component.html
@@ -1,22 +1,59 @@
-<ng-container *ngFor="let accountBalance of dashboard.balances">
-  <mat-card *ngIf="accountBalance.balances.length > 0">
-    <mat-card-header>
-      <mat-card-title>{{accountBalance.accountName}}</mat-card-title>
-      <mat-card-subtitle *ngIf="accountBalance.daysElapsed > 0">
-        {{accountBalance.daysElapsed}} days
-      </mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <mat-chip-listbox>
-        <mat-chip-option *ngFor="let balance of accountBalance.balances"
-                  (click)="viewDocuments(accountBalance.account, balance.currency)">
-          <amount-label [amount]="balance"></amount-label>
-        </mat-chip-option>
-      </mat-chip-listbox>
-    </mat-card-content>
-  </mat-card>
-</ng-container>
+<!--<ng-container *ngFor="let accountBalance of dashboard.balances">-->
+<!--  <mat-card *ngIf="accountBalance.balances.length > 0">-->
+<!--    <mat-card-header>-->
+<!--      <mat-card-title>{{accountBalance.accountName}}</mat-card-title>-->
+<!--      <mat-card-subtitle *ngIf="accountBalance.daysElapsed > 0">-->
+<!--        {{accountBalance.daysElapsed}} days-->
+<!--      </mat-card-subtitle>-->
+<!--    </mat-card-header>-->
+<!--    <mat-card-content>-->
+<!--      <mat-chip-listbox>-->
+<!--        <mat-chip-option *ngFor="let balance of accountBalance.balances"-->
+<!--                  (click)="viewDocuments(accountBalance.account, balance.currency)">-->
+<!--          <amount-label [amount]="balance"></amount-label>-->
+<!--        </mat-chip-option>-->
+<!--      </mat-chip-listbox>-->
+<!--    </mat-card-content>-->
+<!--  </mat-card>-->
+<!--</ng-container>-->
 
-<button class="fab" mat-fab (click)="fastExpense()">
-  <mat-icon>add</mat-icon>
-</button>
+<!--<button class="fab" mat-fab (click)="fastExpense()">-->
+<!--  <mat-icon>add</mat-icon>-->
+<!--</button>-->
+
+<mat-card class="graph-status actual" *ngIf="dashboard.graphStatus?.status == 'ACTUAL'">
+  <mat-icon>check_circle</mat-icon>
+  <div>
+    <div class="status">Actual</div>
+    <div class="date">{{dashboard.graphStatus.date}}</div>
+  </div>
+</mat-card>
+<mat-card class="graph-status rebuild" *ngIf="dashboard.graphStatus?.status == 'REBUILD'">
+  <mat-icon>autorenew</mat-icon>
+  <div>
+    <div class="status">Rebuild...</div>
+    <div class="date">{{dashboard.graphStatus.date}}</div>
+  </div>
+</mat-card>
+<mat-card class="graph-status outdated" *ngIf="dashboard.graphStatus?.status == 'OUTDATED'">
+  <mat-icon>error</mat-icon>
+  <div>
+    <div class="status">Outdated</div>
+    <div class="date">{{dashboard.graphStatus.date}}</div>
+  </div>
+  <button mat-icon-button (click)="rebuildGraph()"><mat-icon>autorenew</mat-icon></button>
+</mat-card>
+
+<mat-card>
+  <mat-card-content class="totals">
+    <h1>{{dashboard.fundsTotal | format:true}}</h1>
+    <h5>{{dashboard.fundsTotalSecondary | format:true}}</h5>
+  </mat-card-content>
+</mat-card>
+
+<mat-card>
+  <div #chart [style.height]="fundChartHeight()"></div>
+</mat-card>
+
+<button mat-raised-button class="expense">Expense</button>
+<button mat-raised-button class="exchange">Exchange</button>
