--- a/web/src/app/report/component/dashboard/dashboard.component.scss
+++ b/web/src/app/report/component/dashboard/dashboard.component.scss
@@ -3,3 +3,62 @@
   grid-gap: 1em;
   grid-template-columns: 1fr 1fr;
 }
+
+.graph-status {
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: 3.8em 1fr min-content;
+  grid-template-rows: 4em;
+  align-items: center;
+
+  mat-icon {
+    justify-self: center;
+    align-self: center;
+  }
+
+  .status {
+    font-size: 1.4em;
+    padding-top: .2em;
+  }
+
+  .date {
+    font-size: .8em;
+  }
+}
+
+.actual {
+  background-color: #a5d6a7;
+  color: #2e7d32;
+}
+
+.rebuild {
+  background-color: #90caf9;
+  color: #0d47a1;
+}
+
+.outdated {
+  background-color: #ef9a9a;
+  color: #c62828;
+}
+
+.totals {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+
+  h1 {
+    margin: 0;
+  }
+}
+
+.expense {
+  background-color: #ef5350!important;
+  color: #fff!important;
+}
+
+.exchange {
+  background-color: #1e88e5!important;
+  color: #fff!important;
+}
