--- a/web/src/app/settings/component/settings-editor.component.html
+++ b/web/src/app/settings/component/settings-editor.component.html
@@ -61,9 +61,9 @@
     <mat-card-header>
       <mat-card-subtitle>Management</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content>
-      <button mat-raised-button color="primary" (click)="clearDatabase()">Clear database</button>
+    <mat-card-content class="management-card">
       <button mat-raised-button color="primary" (click)="rebuildGraph()">Rebuild graph</button>
+      <button mat-raised-button color="primary" (click)="clearDatabase()">Clear database</button>
     </mat-card-content>
   </mat-card>
 
