--- a/web/src/app/common/component/date-label/date-label.component.scss
+++ b/web/src/app/common/component/date-label/date-label.component.scss
@@ -3,8 +3,8 @@
   grid-template-rows: min-content 1fr min-content;
   justify-items: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
   background-color: #ebf0f3;
   border-radius: 4px;
   cursor: default;
