--- a/web/src/app/document/component/document-label/document-label.component.html
+++ b/web/src/app/document/component/document-label/document-label.component.html
@@ -27,7 +27,7 @@
       <amount-label [amount]="documentExchange.amountFrom"></amount-label>
       <div class="sub-title">{{documentExchange.accountFromName}}</div>
     </div>
-    <mat-icon>arrow_right</mat-icon>
+    <mat-icon class="exchange-arrow">arrow_right</mat-icon>
     <div class="vertical">
       <amount-label [amount]="documentExchange.amountTo" *ngIf="documentExchange.amountFrom.value != documentExchange.amountTo.value"></amount-label>
       <div class="sub-title" *ngIf="documentExchange.accountFrom != documentExchange.accountTo">{{documentExchange.accountToName}}</div>
