--- a/web/src/app/report/component/dashboard/dashboard.component.scss
+++ b/web/src/app/report/component/dashboard/dashboard.component.scss
@@ -7,7 +7,7 @@
 .graph-status {
   grid-column: 1 / -1;
   display: grid;
-  grid-template-columns: 3.8em 1fr min-content;
+  grid-template-columns: 3.8em 1fr;
   grid-template-rows: 4em;
   align-items: center;
 
