--- a/web/src/app/report/component/dashboard/dashboard.component.scss
+++ b/web/src/app/report/component/dashboard/dashboard.component.scss
@@ -10,6 +10,7 @@
   grid-template-columns: 3.8em 1fr;
   grid-template-rows: 4em;
   align-items: center;
+  cursor: pointer;
 
   mat-icon {
     justify-self: center;
